Updated to work with Java 8. Fixed problem with exists result file